Refactored some simple game logic without changing the overall logic