@@ -18,8 +18,8 @@ public class Player {
     // synchronized: only ONE thread can move player at a time
     public synchronized void move(int distX, int distY) {
         // Math.max/min clamps the values between the world
-        this.x = Math.clamp(this.x + distX, 0, 19);
-        this.y = Math.clamp(this.y, 0, 19);
+        this.x = Math.max(0, Math.min(19, this.x + distX));
+        this.y = Math.max(0, Math.min(19, this.y + distY));
     }
 
     public String getName(){
